--- a/SkyHotelApp/app/src/main/AndroidManifest.xml
+++ b/SkyHotelApp/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-    
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -52,6 +52,11 @@
         <activity android:name=".Hotel_Introduce">
         </activity>
         <activity android:name=".ReserveActivity">
+        </activity>
+        <activity
+            android:name=".FacilitiesActivity"
+            android:label="@string/title_activity_facilities"
+            android:theme="@style/AppTheme">
         </activity>
     </application>
 
