--- a/S.MiniSeconds/Example/AMazeByNathanOwen/local.properties
+++ b/S.MiniSeconds/Example/AMazeByNathanOwen/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jul 28 01:13:53 KST 2017
-sdk.dir=D\:\\Android_sdk\\Android\\sdk
+#Mon Jul 31 18:28:39 KST 2017
+ndk.dir=D\:\\DevTool\\android\\sdk\\ndk-bundle
+sdk.dir=D\:\\DevTool\\android\\sdk
