--- a/SkyHotelApp/app/src/main/AndroidManifest.xml
+++ b/SkyHotelApp/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -45,7 +46,7 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-    
+        
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -57,6 +58,8 @@
             android:name=".FacilitiesActivity"
             android:label="@string/title_activity_facilities"
             android:theme="@style/AppTheme">
+        </activity>
+        <activity android:name=".LoginActivity">
         </activity>
     </application>
 
