--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="seveno.android.miniseconds"
+<manifest package="seveno.android.miniseconds.threadhandler"
           xmlns:android="http://schemas.android.com/apk/res/android">
     
     <application
@@ -15,12 +15,6 @@
     
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity>
-        <activity android:name=".IntroActivity">
-        </activity>
-        <activity android:name=".SpeedNumGame.SpeedyNumPlay">
-        </activity>
-        <activity android:name=".SpeedNumGame.FinishScreen">
         </activity>
     </application>
 
