--- a/ad34-01.HttpProject/settings.gradle
+++ b/ad34-01.HttpProject/settings.gradle
@@ -1,1 +1,1 @@
-include ':Currentversion', ':mobilelibrary', ':Login', ':Insertperson'
+include ':Currentversion', ':mobilelibrary', ':Login', ':Insertperson', ':Paginglistview'
