--- a/MiniSeconds/app/src/main/AndroidManifest.xml
+++ b/MiniSeconds/app/src/main/AndroidManifest.xml
@@ -10,17 +10,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+        </activity>
+        <activity android:name=".IntroActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
     
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".IntroActivity">
-        </activity>
         <activity android:name=".SpeedNumGame.SpeedyNumPlay">
         </activity>
         <activity android:name=".SpeedNumGame.FinishScreen">
+        </activity>
+        <activity android:name=".GameOver">
+        </activity>
+        <activity android:name=".AvoidStarGame.AvoidStarMain">
         </activity>
     </application>
 
