--- a/MiniSeconds/app/src/main/AndroidManifest.xml
+++ b/MiniSeconds/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="seveno.android.miniseconds"
           xmlns:android="http://schemas.android.com/apk/res/android">
+    
     <uses-permission android:name="android.permission.INTERNET"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,14 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-        
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
         <activity android:name=".IntroActivity">
-           
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+    
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
         <activity android:name=".SpeedNumGame.SpeedyNumPlay">
         </activity>
@@ -26,6 +27,8 @@
         <activity android:name=".GameOver">
         </activity>
         <activity android:name=".AvoidStarGame.AvoidStarMain">
+        </activity>
+        <activity android:name=".AvoidStarGame.FinishScreenA">
         </activity>
     </application>
 
