--- a/BubbleShooter/app/src/main/AndroidManifest.xml
+++ b/BubbleShooter/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="seveno.android.miniseconds"
+<manifest package="seveno.android.miniseconds.bubbleshooter"
           xmlns:android="http://schemas.android.com/apk/res/android">
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
     
     <application
         android:allowBackup="true"
@@ -11,27 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-          
-        </activity>
-        <activity android:name=".IntroActivity">
-        </activity>
-        <activity android:name=".SpeedNumGame.SpeedyNumPlay">
+        <activity android:name=".BubbleGame">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-        
+    
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".SpeedNumGame.FinishScreen">
-        </activity>
-        <activity android:name=".GameOver">
-        </activity>
-        <activity android:name=".BubbleShooter.BubbleGame">
-            
-        </activity>
-        <activity android:name=".GameEnding">
-            
+        <activity android:name=".FinishScreenB">
         </activity>
     </application>
 
