--- a/HandlerSendEx/app/src/main/AndroidManifest.xml
+++ b/HandlerSendEx/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="seveno.android.miniseconds"
+<manifest package="com.android.handlersendex"
           xmlns:android="http://schemas.android.com/apk/res/android">
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
     
     <application
         android:allowBackup="true"
@@ -14,25 +12,9 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-        
+    
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity>
-        <activity android:name=".IntroActivity">
-            
-        </activity>
-        <activity android:name=".SpeedNumGame.SpeedyNumPlay">
-        </activity>
-        <activity android:name=".SpeedNumGame.FinishScreen">
-            
-        </activity>
-        <activity android:name=".GameOver">
-        </activity>
-        <activity android:name=".BubbleShooter.BubbleGame">
-            
-        </activity>
-        <activity android:name=".GameEnding">
-            
         </activity>
     </application>
 
