--- a/ThreadHandlerEx02/app/src/main/AndroidManifest.xml
+++ b/ThreadHandlerEx02/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="seveno.android.miniseconds"
+<manifest package="com.android.threadhandlerex02"
           xmlns:android="http://schemas.android.com/apk/res/android">
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
     
     <application
         android:allowBackup="true"
@@ -12,27 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-          
-        </activity>
-        <activity android:name=".IntroActivity">
-            
-        </activity>
-        <activity android:name=".SpeedNumGame.SpeedyNumPlay">
-        </activity>
-        <activity android:name=".SpeedNumGame.FinishScreen">
-            
-        </activity>
-        <activity android:name=".GameOver">
-        </activity>
-        <activity android:name=".BubbleShooter.BubbleGame">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-        
+    
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity>
-        <activity android:name=".GameEnding">
-           
         </activity>
     </application>
 
