--- a/RecyClerTimeEx/app/build.gradle
+++ b/RecyClerTimeEx/app/build.gradle
@@ -1,11 +1,10 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion "26.0.1"
     defaultConfig {
-        applicationId "seveno.android.miniseconds"
+        applicationId "seveno.android.miniseconds.recyclertimeex"
         minSdkVersion 22
         targetSdkVersion 25
         versionCode 1
@@ -27,7 +26,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.google.android.gms:play-services-auth:8.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
